Closed Bug 1286011 Opened 8 years ago Closed 8 years ago

Font fallback doesn't work for characters with Script::UNKNOWN

Categories

(Core :: Graphics: Text, defect)

44 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

(Depends on 1 open bug, Regressed 1 open bug)

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1253542 +++

See bug 1253542 comment 18. We don't do font fallback as expected for characters with script 'unknown', which includes characters in newer versions of Unicode than Gecko's data.
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Comment on attachment 8769808 [details] [diff] [review]
Allow system-wide font fallback to be attempted for characters with 'unknown' script

LGTM. Given that this code used a wrong constant and did not have the intended effect for a long time, I don't think we have concern about the performance.
Attachment #8769808 - Flags: review?(VYV03354) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/9189a2cc39d0c35e8823349aa0b4057ab8167b32
Bug 1286011 - Allow system-wide font fallback to be attempted for characters with 'unknown' script. r=emk
https://hg.mozilla.org/mozilla-central/rev/9189a2cc39d0
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Regressions: 1640635
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: