Bug 1286011 - Allow system-wide font fallback to be attempted for characters with 'unknown' script. r=emk